--- a/.github/workflows/entrega.yml
+++ b/.github/workflows/entrega.yml
@@ -5,7 +5,7 @@ on:
       - main
 
 jobs:
-  deliver:
+  entrega:
     runs-on: ubuntu-latest
     steps:
       - name: Check out repository code
@@ -19,7 +19,7 @@ jobs:
             *.py
             README.md
 
-  deploy:
+  implementacao:
     runs-on: ubuntu-latest
     needs: deliver
     steps:
