--- a/.github/workflows/integracao.yml
+++ b/.github/workflows/integracao.yml
@@ -35,3 +35,15 @@ jobs:
         with:
           push: true
           tags: user/app:latest
+
+  discord:
+    runs on: ubuntu-latest
+    steps:
+      -uses: actions/checkout@v4
+
+      -name: Run Discord Commits
+      uses: Sniddl/discord-commits@v1.6
+      with:
+            webhook: ${{ secrets.DISCORD_WEBHOOK }}
+            template: "avatar-with-link"
+            include-extras: true
