--- a/.github/workflows/discord.yml
+++ b/.github/workflows/discord.yml
@@ -1,16 +1,15 @@
-name: Discord
+name: Discord Integration
 on:
-  -push
-
+  push:
 
 jobs:
-  discord:
-    runs on: ubuntu-latest
-    steps:
-      -uses: actions/checkout@v4
-      -name: Run Discord Commits
-      uses: Sniddl/discord-commits@v1.6
-      with:
-        webhook: ${{ secrets.DISCORD_WEBHOOK }}
-        template: "avatar-with-link"
-        include-extras: true
+    discord:
+      runs-on: ubuntu-latest
+      steps:
+        - uses: actions/checkout@v4
+        - name: Discord Commits
+          uses: Sniddl/discord-commits@v1.6
+          with:
+            webhook: ${{ secrets.DISCORD_WEBHOOK }}
+            template: "avatar-with-link"
+            include-extras: true
